tests/NormalTests/paczka2/big_fuzzy/32735993.err
Error in line 1: 9qY4 A911 94,1
Error in line 4: uXcq A734 54,3
Error in line 5: 9qY4 S94 71,5
Error in line 6: EsaNho S94 55,1
Error in line 11: 9qY4 A911 64,0
Error in line 10: uXcq S94 9,3
Error in line 15: uXcq S174 12,2
Error in line 14: 9qY4 S174 39,3
Error in line 34: A911 S94 237,6
Error in line 35: A911 A734 27,5
Error in line 42: 1JfM6A S94 7,2
Error in line 44: 9qY4 S94 9,4
Error in line 62: d41NJ2sFSv S94 71,1
Error in line 56: 9qY4 A911 37,0
Error in line 65: d41NJ2sFSv A911 13,9
Error in line 69: 1JfM6A S94 61,4
Error in line 71: 1JfM6A A734 69,7
Error in line 75: EsaNho S94 96,0
Error in line 86: A911 S94 92,1
Error in line 92: 9qY4 S94 91,7
Error in line 101: LbyX A911 -4,1
Error in line 97: 1JfM6A S94 54,3
Error in line 100: 9qY4 S174 52,2
Error in line 96: LbyX A911 96,7
Error in line 111: LbyX S174 91,9
Error in line 109: 9qY4 S94 98,2
Error in line 116: uXcq A911 45,3
Error in line 120: 9qY4 S174 172,2
Error in line 136: A911 S174 89,9
Error in line 139: ?S	74
Error in line 149: A911 S174 85,6
Error in line 146: LbyX A734 43,7
Error in line 154: LbyX A911 69,2
Error in line 159: LbyX A734 -6,2
Error in line 160: uXcq S174 0,7
Error in line 158: A911 A734 229,3
Error in line 163: 1JfM6A S94 75,0
Error in line 164: A911 S94 64,3
Error in line 155: LbyX A734 96,0
Error in line 176: EsaNho A911 31,8
Error in line 193: uXcq S174 65,1
Error in line 199: LbyX S174 77,6
Error in line 203: EsaNho S94 67,5
Error in line 209: LbyX S174 84,6
Error in line 216: A911 A911 49,1
Error in line 217: 9qY4 S174 26,5
Error in line 233: 1JfM6A A911 256,53
Error in line 232: EsaNho S94 14,5
